# deai-humanizer

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  realshot_naturalizer.py  test_realshot_naturalizer.py
.agents/skills/deai-humanizer/: SKILL.md
.agents/skills/deai-humanizer/agents/: openai.yaml
.agents/skills/deai-humanizer/references/: realism-rules.md
.github/workflows/: ci.yml
examples/: usage.py
