[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "deai-humanizer"
version = "0.1.0"
description = "Rule-based prompt and image helper for realistic photography naturalization."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "DeAI Humanizer contributors" }
]
keywords = [
  "image",
  "prompt",
  "photography",
  "realism",
  "image-editing",
  "codex-skill",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
image = ["Pillow>=10.0.0"]
dev = ["build>=1.2.0"]

[project.scripts]
deai-humanizer = "realshot_naturalizer:_main"
realshot-naturalizer = "realshot_naturalizer:_main"

[project.urls]
Homepage = "https://github.com/your-name/deai-humanizer"
Issues = "https://github.com/your-name/deai-humanizer/issues"

[tool.setuptools]
py-modules = ["realshot_naturalizer"]

[tool.ruff]
line-length = 100
